--- a/Thesis_project/Thesis_project.vcxproj.filters
+++ b/Thesis_project/Thesis_project.vcxproj.filters
@@ -19,6 +19,15 @@
     <ClCompile Include="ObjFileLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VisibilitySolver3D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="algebra.h">
@@ -37,6 +46,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="mesh_bunny.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VisibilitySolver3D.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
