--- a/Thesis_project/Thesis_project.vcxproj.filters
+++ b/Thesis_project/Thesis_project.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClCompile Include="common.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SceneGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="algebra.h">
@@ -54,5 +57,6 @@
     <ClInclude Include="Renderer.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="SceneGenerator.h" />
   </ItemGroup>
 </Project>
